--- a/МО_ЛР2_Маргарян_ПИН_231.ipynb
+++ b/МО_ЛР2_Маргарян_ПИН_231.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIg9KAfbCMJrg0o3D/ba4k",
+      "authorship_tag": "ABX9TyOCeS659zzwb5LuYApL4LCC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/David-GHMM/ML-LAB2/blob/main/%D0%9C%D0%9E_%D0%9B%D0%A02_%D0%9C%D0%B0%D1%80%D0%B3%D0%B0%D1%80%D1%8F%D0%BD_%D0%9F%D0%98%D0%9D_231.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/David-GHMM/ML-Lab2/blob/main/%D0%9C%D0%9E_%D0%9B%D0%A02_%D0%9C%D0%B0%D1%80%D0%B3%D0%B0%D1%80%D1%8F%D0%BD_%D0%9F%D0%98%D0%9D_231.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -606,7 +606,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Изменим размер фигуры и применим метод hist() для визуализации распределения нескольких признаков:"
+        "#### Изменим размер фигуры и применим метод hist() для визуализации распределения нескольких признаков:"
       ],
       "metadata": {
         "id": "P254njIFRS4W"
@@ -657,7 +657,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Аналогичный тип графика можно получить с использованием matplotlib:"
+        "#### Аналогичный тип графика можно получить с использованием matplotlib:"
       ],
       "metadata": {
         "id": "MR4BCf2GSQXg"
@@ -694,7 +694,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "График распределения:"
+        "#### График распределения:"
       ],
       "metadata": {
         "id": "z9BkfcBbTl4e"
@@ -731,7 +731,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Использование библиотеки Seaborn для построения диаграммы типа \"ящик с усами\""
+        "#### Использование библиотеки Seaborn для построения диаграммы типа \"ящик с усами\""
       ],
       "metadata": {
         "id": "Mwwt9gcKbBLx"
@@ -767,7 +767,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ниже представлен код и результат построения графиков для анализа зарплат клиентов по каждому сектору, в котором они работают."
+        "#### Ниже представлен код и результат построения графиков для анализа зарплат клиентов по каждому сектору, в котором они работают."
       ],
       "metadata": {
         "id": "o0Ibxv8XbvAR"
@@ -812,7 +812,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Визуализация категориальных признаков:"
+        "#### Визуализация категориальных признаков:"
       ],
       "metadata": {
         "id": "KIVaP_cJnoi0"
@@ -856,7 +856,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Гистограмма, показывающая 5 самых распространненых возрастов среди клиентов туристической компании:"
+        "#### Гистограмма, показывающая 5 самых распространненых возрастов среди клиентов туристической компании:"
       ],
       "metadata": {
         "id": "7ANp4TwhgC5D"
@@ -895,7 +895,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Гистограмма для всех возрастов:"
+        "#### Гистограмма для всех возрастов:"
       ],
       "metadata": {
         "id": "v5wIN4MLhBqS"
@@ -933,7 +933,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Определение первых n \"популярных\" возрастов"
+        "#### Определение первых n \"популярных\" возрастов"
       ],
       "metadata": {
         "id": "nJnmoVMamqjh"
@@ -975,7 +975,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Попарное распределение признаков:"
+        "#### Попарное распределение признаков:"
       ],
       "metadata": {
         "id": "VxBHSl_Pt9Bz"
@@ -1011,7 +1011,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Добавление целевого признака:"
+        "#### Добавление целевого признака:"
       ],
       "metadata": {
         "id": "Ast0jfQc2J_w"
@@ -1047,7 +1047,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Использование matplotlib, подписей данных, заголовков. Использование простейших пользовательских цветов:\n"
+        "#### Использование matplotlib, подписей данных, заголовков и простейших пользовательских цветов:\n"
       ],
       "metadata": {
         "id": "x9uo74S12nk-"
@@ -1089,9 +1089,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Раскрашивание данных\n",
-        "\n",
-        "Цвет в зависимости от того, есть ли образование у клиента:"
+        "#### Раскрашивание данных\n",
+        "#### Цвет в зависимости от того, есть ли образование у клиента:"
       ],
       "metadata": {
         "id": "XrGjQ1_ne_ZR"
@@ -1132,7 +1131,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Раскраска часто летающих клиентов и добавление легенды:"
+        "#### Раскраска часто летающих клиентов и добавление легенды:"
       ],
       "metadata": {
         "id": "uB8ziKBJgQnp"
@@ -1513,7 +1512,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Строим heatmap:"
+        "#### Строим heatmap:"
       ],
       "metadata": {
         "id": "Lw9iDDZUv9Be"
@@ -1549,9 +1548,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Коррелирующие признаки обычно удаляются и не рассматриваются в процессе обучения.\n",
+        "#### Коррелирующие признаки обычно удаляются и не рассматриваются в процессе обучения.\n",
         "\n",
-        "Но из карты heatmap видно, что **сильно** коррелирующих признаков нет, поэтому удаление не требуется."
+        "#### Но из карты heatmap видно, что **сильно** коррелирующих признаков нет, поэтому удаление не требуется."
       ],
       "metadata": {
         "id": "odwVyinl0JbX"
